# dutchmans-prisoner

./: .gitignore  Cargo.toml  GLFW_INIT.C.ADDITION  LICENSE  README.md  Static.Cargo.toml  dynamic-to-static.sh  static-to-dynamic.sh
dutchman-game/: Cargo.toml  build.sh  dynamic-build.sh  static-build.sh
dutchman-game/src/: asset.rs  controls.rs  lib.rs
dutchman-game/src/render/: mod.rs  shader.rs  sprite.rs  texture.rs
src/: asset.rs  main.rs
src/render/: display_list.rs  mod.rs  shader.rs  sprite.rs  texture.rs
