[package]

name = "legame"
version = "0.0.1"
authors = ["Resonious <metreckk@gmail.com>"]

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs"
default-features = false

[dependencies.image]
git = "https://github.com/PistonDevelopers/image"

[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs"
