[package]

name = "dutchman_game"
version = "0.0.1"
authors = ["Resonious <metreckk@gmail.com>"]

[lib]
name = "dutchman_game"
crate-type = ["dylib"]

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs"
default-features = false

[dependencies.image]
git = "https://github.com/PistonDevelopers/image"

[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs"
